# andoidchat

./: .gitignore  README.md  package.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
apps/android/: README.md  settings.gradle.kts
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/scripts/: ensure-vite-dev.mjs  run-tauri-dev.mjs  spawn-command.mjs
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  protocol.rs  simulator.rs  state.rs  tcp_client.rs  udp_discovery.rs
apps/desktop/src/components/: ChatArea.module.css  ChatArea.tsx  ChatBubbleBar.module.css  ChatBubbleBar.tsx  ChatLayout.module.css  ChatLayout.tsx  ConnectionGraph.module.css  ConnectionGraph.tsx  Header.module.css  Header.tsx  InputBar.module.css  InputBar.tsx  LoginScreen.module.css  LoginScreen.tsx  MessageBubble.module.css  MessageBubble.tsx  MetricsGrid.module.css  MetricsGrid.tsx  MotionArt.module.css  MotionArt.tsx  Sidebar.module.css  Sidebar.tsx  StatusBadge.module.css  StatusBadge.tsx  VisualizationPanel.module.css  VisualizationPanel.tsx  WindowTitlebar.module.css  WindowTitlebar.tsx
apps/desktop/src/hooks/: useAutoScroll.ts  useChatReducer.ts  useSimulation.ts  useTauri.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/types/: index.ts
apps/desktop/src/utils/: protocol.ts  simulationBus.ts  (+1 more)
docs/notes/: next.txt  suggestion.txt  task.txt
services/tcp-server/: server.py  server_async.py
tools/cli-client/: client.py
tools/load-test/: load_test.py
(+26 files in other folders)
